# TabletForge

./: .gitignore  CLAUDE.md  pyproject.toml
tabletforge/: __init__.py  __main__.py  font.py  noise.py  renderer.py
tests/: test_basic.py
